chat send message ui update

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -12,5 +12,9 @@
     },
     "footer":{
       "balance":"Balance"
+    },
+    "chat":{
+      "sendmessage":"Send Message",
+      "sendfiles":"Send Files:"
     }
 } 
